# zirv-kafka

./: Cargo.toml  README.md
.cargo/: config.toml
.github/workflows/: cd.yaml  ci.yaml
.zirv/: .shortcuts.yaml  safe-commit.yaml
src/: consumer.rs  kafka.rs  lib.rs  producer.rs
